Skeleton code
